--- a/views/profiles/edit.ejs
+++ b/views/profiles/edit.ejs
@@ -1,67 +1,71 @@
 <% include ../partials/header %>
 <div class="container">
     <div class="row">
-        <a href="/campgrounds">Go back</a>
-        <h1 class="show-name-create">Edit your profile <%= campground.name %></h1>
-            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+        <a href="/profiles">Go back</a>
+        <h1 class="show-name-create">Edit your profile <%= profile.name %></h1>
+            <form action="/profiles/<%= profile._id %>?_method=PUT" method="POST">
                 <div class="col-sm-6">
                     <div class="form-group">
                         <label>Your Name</label>
-                        <input class="form-control" type="text" name="campground[name]" value="<%= campground.name %>">
+                        <input class="form-control" type="text" name="profile[name]" value="<%= profile.name %>">
+                    </div>
+                    <div class="form-group">
+                        <label>Your Email</label>
+                        <input class="form-control" type="email" name="profile[userEmail]" value="<%= profile.userEmail %>">
                     </div>
                     <div class="form-group">
                         <label>Upload a Profile Image</label>
-                        <input class="form-control" type="text" name="campground[image]" value="<%= campground.image %>">
+                        <input class="form-control" type="text" name="profile[image]" value="<%= profile.image %>">
                     </div>
                     <div class="form-group">
                         <label>Current City</label>
-                        <input class="form-control" type="text" name="campground[currentCity]" value="<%= campground.currentCity %>">
+                        <input class="form-control" type="text" name="profile[currentCity]" value="<%= profile.currentCity %>">
                     </div>
                     <div class="form-group">
                         <label>Country</label>
-                        <input class="form-control" type="text" name="campground[currentCountry]" value="<%= campground.currentCountry %>">
+                        <input class="form-control" type="text" name="profile[currentCountry]" value="<%= profile.currentCountry %>">
                     </div>
                     <div class="form-group">
                         <label>Where you make shit happen</label>
-                        <input class="form-control" type="text" name="campground[venue]" value="<%= campground.venue %>">
+                        <input class="form-control" type="text" name="profile[venue]" value="<%= profile.venue %>">
                     </div>
                     <div class="form-group">
                         <label>Your story</label>
-                        <input class="form-control" type="text" name="campground[description]" value="<%= campground.description %>">
+                        <input class="form-control" type="text" name="profile[description]" value="<%= profile.description %>">
                     </div>
                     <div class="form-group">
                         <label>What is your current role</label>
-                        <input class="form-control" type="text" name="campground[role]" value="<%= campground.role %>">
+                        <input class="form-control" type="text" name="profile[role]" value="<%= profile.role %>">
                     </div>
                     <div class="form-group">
                         <label>What's your Insta profile?</label>
-                        <input class="form-control" type="text" name="campground[instaHandle]" value="<%= campground.instaHandle %>">
+                        <input class="form-control" type="text" name="profile[instaHandle]" value="<%= profile.instaHandle %>">
                     </div>
                     <div class="form-group">
                         <label>And Twitter handle?</label>
-                        <input class="form-control" type="text" name="campground[twitterHandle]" value="<%= campground.twitterHandle %>">
+                        <input class="form-control" type="text" name="profile[twitterHandle]" value="<%= profile.twitterHandle %>">
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="form-group">
                         <label>Tell us your greatest hospo story</label>
-                        <input class="form-control" type="text" name="campground[greatestStory]" value="<%= campground.greatestStory %>">
+                        <input class="form-control" type="text" name="profile[greatestStory]" value="<%= profile.greatestStory %>">
                     </div>
                     <div class="form-group">
                         <label>Your top 3 achievements</label>
-                        <input class="form-control" type="text" name="campground[achievements]" value="<%= campground.achievements %>">
+                        <input class="form-control" type="text" name="profile[achievements]" value="<%= profile.achievements %>">
                     </div>
                     <div class="form-group">
                         <label>The top 3 things you're passionate about</label>
-                        <input class="form-control" type="text" name="campground[passionateAbout]" value="<%= campground.passionateAbout %>">
+                        <input class="form-control" type="text" name="profile[passionateAbout]" value="<%= profile.passionateAbout %>">
                     </div>
                     <div class="form-group">
                         <label>What do you love about your industry?</label>
-                        <input class="form-control" type="text" name="campground[industryLove]" value="<%= campground.industryLove %>">
+                        <input class="form-control" type="text" name="profile[industryLove]" value="<%= profile.industryLove %>">
                     </div>
                     <div class="form-group">
                         <label>What would you like to improve about your industry?</label>
-                        <input class="form-control" type="text" name="campground[industryImprove]" value="<%= campground.industryImprove %>">
+                        <input class="form-control" type="text" name="profile[industryImprove]" value="<%= profile.industryImprove %>">
                     </div>
                     <div class="form-group">
                         <button class="btn btn-lg btn-mtp-black btn-block">Submit</button>
