--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,9 +1,9 @@
 <% include ../partials/header %>
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center;">Add new comment to <%= campground.name %></h1>
+        <h1 style="text-align: center;">Add new comment to <%= profile.name %></h1>
         <div style="width: 30%;margin: 30px auto;">
-            <form action="/campgrounds/<%= campground._id %>/comments" method="POST">
+            <form action="/profiles/<%= profile._id %>/comments" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="comment[text]" placeholder="text">
                 </div>
@@ -11,7 +11,7 @@
                     <button class="btn btn-lg btn-primary btn-block">Submit</button>
                 </div>
             </form>
-            <a href="/campgrounds">Go back</a>
+            <a href="/profiles">Go back</a>
         </div>
 
     </div>
