--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -26,7 +26,7 @@
     <div id="landing-header">
  		<h1 id="mtp-h1">Welcome to MTP Profiles!</h1>
  		<h4>Setup your own legendary profile</h4>
-		<a href="/campgrounds" class="btn btn-light">MEET THE PROFILES <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+		<a href="/profiles" class="btn btn-light">MEET THE PROFILES <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
         </a>
     </div>
     
@@ -38,4 +38,8 @@
       <li></li>
     </ul>
 
-<% include partials/footer %>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    </body>
+</html>
