--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,16 @@
+        <div class="container">
+        <hr>    
+                <div class="text-center center-block">
+                    <h4>- Follow MEETTHEPEOPLE -</h4>
+                    <br />
+                        <a href="https://www.facebook.com/meetthepeople.co/"><i class="fa fa-facebook-square fa-3x social"></i></a>
+        	        <a href="https://www.instagram.com/meetthepeople.co/"><i class="fa fa-instagram fa-3x social"></i></a>
+        	        <a href="https://twitter.com/bl_waller/"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
+        	        <a href="mailto:brittanyleewaller@gmail.com"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
+                </div>
+            <hr>
+        </div>
+        
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
