--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,13 +17,13 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <% if(!currentUser) { %>
-                    <li><a href="/campgrounds">Profiles</a></li>
-                    <li><a href="#">Notice Board</a></li>
+                    <li><a href="/profiles">Profiles</a></li>
+                    <li><a href="/jobs">Jobs</a></li>
                     <li><a href="/login">Login</a></li>
                     <li><a href="/register">Sign Up</a></li>
                     <% } else { %>
-                    <li><a href="/campgrounds">Profiles</a></li>
-                    <li><a href="#">Notice Board</a></li>
+                    <li><a href="/profiles">Profiles</a></li>
+                    <li><a href="/jobs">Jobs</a></li>
                     <li><a href="/">Signed In As <%= currentUser.username %></a></li>
                     <li><a href="/logout">Logout</a></li>
                     <% } %>
