--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -4,9 +4,10 @@
     <header class="jumbotron">
         <div class="container">
             <h1 id="mtp-h1">Join Meetthepeople</h1>
-            <p>Create your own MTP profile. Trust us, it's the TITS!</p>
+            <h2>Create your own MTP profile and start telling your story</h2>
+            <br>
             <p>
-            <a class="btn btn-default btn-lg" href="/profiles/new">Get Started</a>
+            <a class="btn btn-default btn-lg" href="/profiles/new">CREATE A PROFILE ></a>
             </p>
         </div>
     </header>
