--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -19,7 +19,8 @@ a {
 
 .btn {
     border-radius: 0;
-    font-family: Roboto,sans-serif; 
+    font-family: Oswald,sans-serif;
+    font-weight: bold;
 }
 
 .navbar {
@@ -39,7 +40,7 @@ a {
 }
 
 .jumbotron {
-    background-image: url("https://meetthepeeps.files.wordpress.com/2017/06/the_long_goodbye_014.jpg?w=1024");
+    background-image: url("https://image.ibb.co/eCvvVn/the_long_goodbye_014_dark.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
@@ -48,7 +49,7 @@ a {
 }
 
 #jumbotron-jobs {
-    background-image: url("https://meetthepeeps.files.wordpress.com/2017/06/alen_043.jpg");
+    background-image: url("https://image.ibb.co/ksifAn/mtp_jobs_header.jpg");
 }
 
 .transbox {
