--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -12,6 +12,10 @@ a {
     color: #000;
 }
 
+#beta {
+    font-size: 0.5em;
+}
+
 #profiles-back-btn {
     margin-top: 20px;
     margin-left: 10px;
