--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,36 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>MEETTHEPEOPLE Profiles</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/stylesheets/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-        <script src="https://use.fontawesome.com/75feccbb72.js"></script>
-    </head>
-    <body>
-        <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">MEETTHEPEOPLE <span id="beta">beta</span></a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <% if(!currentUser) { %>
-                    <li><a href="/profiles">Profiles</a></li>
-                    <li><a href="/jobs">Jobs</a></li>
-                    <li><a href="/login">Login</a></li>
-                    <li><a href="/register">Sign Up</a></li>
-                    <% } else { %>
-                    <li><a href="/profiles">Profiles</a></li>
-                    <li><a href="/jobs">Jobs</a></li>
-                    <li><a href="/">Signed In As <%= currentUser.username %></a></li>
-                    <li><a href="/logout">Logout</a></li>
-                    <% } %>
+  <head>
+      <title>MEETTHEPEOPLE Profiles</title>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+      <link rel="stylesheet" href="/stylesheets/main.css">
+      <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">        
+      <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+      <script src="https://use.fontawesome.com/75feccbb72.js"></script>
+  </head>
+  <body>
+    <nav class="navbar navbar-fixed-top navbar-toggleable-sm navbar-light bg-light">
+    <div class="container d-flex flex-row flex-md-nowrap flex-wrap">
+    <a href="#" class="hidden-lg-up my-2 mr-3" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false">
+        <i class="fa fa-bars"></i>
+    </a>
+    <a class="navbar-brand" href="/">MEETTHEPEOPLE<span id="beta">beta</span></a>
+    <div class="navbar-collapse collapse flex-md-unordered flex-last" id="navbarCollapse">
+                <% if(!currentUser) { %>
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a href="/profiles" class="nav-link">Profiles</a></li>
+                    <li class="nav-item active"><a href="/jobs" class="nav-link">Jobs</a></li>
                 </ul>
-            </div>
-        </div>
-    </nav>
+                <div class="d-flex ml-auto">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active"><a href="/login" class="nav-link">Login</a></li>
+                        <li class="nav-item active"><a href="/register" class="nav-link">Sign Up</a></li>
+                    </ul>
+                </div>
+                <% } else { %>
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a href="/profiles" class="nav-link">Profiles</a></li>
+                    <li class="nav-item active"><a href="/jobs" class="nav-link">Jobs</a></li>
+                </ul>
+                <div class="d-flex ml-auto">
+                    <ul class="navbar-nav">
+                    <li class="nav-item active"><a href="/" class="nav-link">Signed In As <%= currentUser.username %></a></li>
+                    <li class="nav-item active"><a href="/logout" class="nav-link">Logout</a></li>
+                    </ul>
+                </div>
+                <% } %>
+    </div>
+    <div class="hidden-md-up w-100"><!--hidden spacer to force wrap of links on sm--></div>
+    </div>
+</nav>
+
 <div class="container">
     <% if(error && error.length > 0){%>
         <div class="alert alert-danger" role="alert">
