--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -148,6 +148,11 @@ h5 {
     margin-bottom: 20px;
 }
 
+.form-margin {
+    margin-top: 20px; 
+    margin-bottom: 10%;
+}
+
 #delete-form {
     display: inline
 }
@@ -163,4 +168,8 @@ h5 {
     background-color: #000;
     text-align: center;
     padding: 10px;
+}
+
+.login-form {
+    btn btn-lg btn-outline-primary btn-block
 }
