--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,17 +1,22 @@
 <% include ./partials/header %>
-<div class="container">
+<div class="container form-margin">
     <div class="row">
-    <h1 style="text-align:center" id="mtp-h1">Login</h1>
-        <div style="width: 30%;margin: 30px auto;">
+        <div class="col-md-6 col-md-offset-3">
+            <h1 style="text-align: center;" id="mtp-h1">Login</h1>
+            <p>Its where all the action happens</p>
+            <br>
             <form action="/login" method="POST">
                 <div class="form-group">
+                    <label>Username</label>
                     <input class="form-control" type="text" name="username" placeholder="username">
                 </div>
                 <div class="form-group">
+                    <label>Password</label>
                     <input class="form-control" type="password" name="password" placeholder="password">
                 </div>
+                <br>
                 <div class="form-group">
-                    <input class="btn btn-lg btn-mtp-black btn-block" type="submit" value="Login">
+                    <input class="btn btn-lg btn-outline-primary btn-block" type="submit" value="Login">
                 </div>
             </form>
         </div>
