--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -5,7 +5,7 @@
         <div class="container">
             <h1 id="mtp-h1">Share your own story</h1>
             <p>Simply create your own MTP profile to share your unique story.</p>
-            <a class="btn btn-secondary btn-lg" href="#">CREATE A PROFILE</a>
+            <a class="btn btn-secondary btn-lg" href="/profiles/new">CREATE A PROFILE</a>
         </div>
     </header>
 
