--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -55,7 +55,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <strong><%= comment.author.username %></strong>
-                                    <span class="pull-right">10 days ago</span>
+                                    <span class="pull-right">Date added TBC</span>
                                     <p>
                                         <%= comment.text %>
                                     </p>
