--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,17 +1,27 @@
 <% include ./partials/header %>
-<div class="container">
+<div class="container form-margin">
     <div class="row">
-    <h1 style="text-align:center" id="mtp-h1">Sign up here</h1>
-        <div style="width: 30%;margin: 30px auto;">
+        <div class="col-md-6 col-md-offset-3">
+            <h1 style="text-align: center;" id="mtp-h1">Sign up</h1>
+            <p>This will allow you to create an MTP profile and join our network of legends</p>
+            <br>
             <form action="/register" method="POST">
                 <div class="form-group">
-                    <input class="form-control" type="text" name="username" placeholder="username">
+                    <label>Username</label>
+                    <input class="form-control" type="text" name="username" placeholder="Minimum 8 characters">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="password" placeholder="password">
+                    <label>Password</label>
+                    <input class="form-control" type="password" name="password" placeholder="Minimum 8 characters">
                 </div>
+                <label class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input">
+                  <span class="custom-control-indicator"></span>
+                  <span class="custom-control-description">I accept MTP's terms and privacy policy</span>
+                </label>
+                <br>
                 <div class="form-group">
-                    <input class="btn btn-lg btn-mtp-black btn-block" type="submit" value="Sign Up">
+                    <input class="btn btn-lg btn-outline-primary btn-block" type="submit" value="Sign Up">
                 </div>
             </form>
         </div>
