--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <% include ./partials/header %>
 <div class="container form-margin">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-6 offset-md-3">
             <h1 style="text-align: center;" id="mtp-h1">Login</h1>
             <p>Its where all the action happens</p>
             <br>
