--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <% include ./partials/header %>
 <div class="container form-margin">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-6 offset-md-3">
             <h1 style="text-align: center;" id="mtp-h1">Sign up</h1>
             <p>This will allow you to create an MTP profile and join our network of legends</p>
             <br>
