--- a/views/profiles/edit.ejs
+++ b/views/profiles/edit.ejs
@@ -1,10 +1,14 @@
 <% include ../partials/header %>
 <div class="container">
+<a id="show-btn" class="btn btn-secondary btn-sm" href="/profiles">Back to profiles</a>
     <div class="row">
-        <a href="/profiles">Go back</a>
-        <h1 class="show-name-create">Edit your profile <%= profile.name %></h1>
+        <div class="col-md-6 offset-md-3">
+            <h1 style="text-align: center;" id="mtp-h1">Create a profile</h1>
+            <p>Tell you own story and connect with our network of legends</p>
+            <br>
+        </div>
+        <div class="col-md-6">
             <form action="/profiles/<%= profile._id %>?_method=PUT" method="POST">
-                <div class="col-sm-6">
                     <div class="form-group">
                         <label>Your Name</label>
                         <input class="form-control" type="text" name="profile[name]" value="<%= profile.name %>">
@@ -68,12 +72,11 @@
                         <input class="form-control" type="text" name="profile[industryImprove]" value="<%= profile.industryImprove %>">
                     </div>
                     <div class="form-group">
-                        <button class="btn btn-lg btn-mtp-black btn-block">Submit</button>
+                        <button class="btn btn-lg btn-outline-primary btn-block">Submit</button>
                     </div>
                 </div>
             </form>
         </div>
-
     </div>
 </div>
 
