CSS update edit

--- a/views/profiles/edit.ejs
+++ b/views/profiles/edit.ejs
@@ -3,8 +3,8 @@
 <a id="show-btn" class="btn btn-secondary btn-sm" href="/profiles">Back to profiles</a>
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <h1 style="text-align: center;" id="mtp-h1">Create a profile</h1>
-            <p>Tell you own story and connect with our network of legends</p>
+            <h1 style="text-align: center;" id="mtp-h1">Edit your profile <%= profile.name %></h1>
+            <p>Keep your profile up to date legend</p>
             <br>
         </div>
         <div class="col-md-6">
