Header update New/Edit

--- a/views/profiles/new.ejs
+++ b/views/profiles/new.ejs
@@ -2,8 +2,8 @@
 <div class="container">
 <a id="show-btn" class="btn btn-secondary btn-sm" href="/profiles">Back to profiles</a>
     <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <h1 style="text-align: center;" id="mtp-h1">Create a profile</h1>
+        <div class="col-md-6 offset-md-3" style="text-align: center;" >
+            <h1 id="mtp-h1">Create a profile</h1>
             <p>Tell you own story and connect with our network of legends</p>
             <br>
         </div>
