--- a/views/profiles/edit.ejs
+++ b/views/profiles/edit.ejs
@@ -2,8 +2,8 @@
 <div class="container">
 <a id="show-btn" class="btn btn-secondary btn-sm" href="/profiles">Back to profiles</a>
     <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <h1 style="text-align: center;" id="mtp-h1">Edit your profile <%= profile.name %></h1>
+        <div class="col-md-6 offset-md-3" style="text-align: center;" >
+            <h1 id="mtp-h1">Edit your profile <%= profile.name %></h1>
             <p>Keep your profile up to date legend</p>
             <br>
         </div>
